--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:29:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">63.6&#176;F</td>
+        <td class="data">63.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">63.6&#176;F</td>
+        <td class="data">63.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">63.6&#176;F</td>
+        <td class="data">63.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.0&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">71%</td>
+        <td class="data">72%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.870 inHg (0.001)</td>
+        <td class="data">29.868 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph NNE (22&#176;)</td>
+        <td class="data">5 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:16 AM">
             64.4</span><br/>
-          <span title="12:27:46 AM">
-            63.6</span>
+          <span title="12:33:34 AM">
+            63.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:16 AM (Sunday)">
             64.4</span><br/>
-          <span title="12:27:46 AM (Sunday)">
-            63.6</span>
+          <span title="12:33:34 AM (Sunday)">
+            63.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:27:46 AM" class="loval">
-            63.6</span>
+          <span title="12:33:34 AM" class="loval">
+            63.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:27:46 AM (Sunday)" class="loval">
-            63.6</span>
+          <span title="12:33:34 AM (Sunday)" class="loval">
+            63.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:26:52 AM">
-            71</span><br/>
+          <span title="12:31:08 AM">
+            72</span><br/>
           <span title="12:00:04 AM">
             68</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:26:52 AM (Sunday)">
-            71</span><br/>
+          <span title="12:31:08 AM (Sunday)">
+            72</span><br/>
           <span title="12:00:04 AM (Sunday)">
             68</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 9 hours, 42 minutes</td>
+      <td class="data">18 days, 9 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 9 hours, 42 minutes</td>
+      <td class="data">18 days, 9 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
