--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:39:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.9&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.9&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.9&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">72%</td>
+        <td class="data">73%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.868 inHg (0.001)</td>
+        <td class="data">29.870 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">8 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:16 AM">
             64.4</span><br/>
-          <span title="12:38:42 AM">
-            62.8</span>
+          <span title="12:44:00 AM">
+            62.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:16 AM (Sunday)">
             64.4</span><br/>
-          <span title="12:38:42 AM (Sunday)">
-            62.8</span>
+          <span title="12:44:00 AM (Sunday)">
+            62.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:42 AM" class="loval">
-            62.8</span>
+          <span title="12:44:00 AM" class="loval">
+            62.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:38:42 AM (Sunday)" class="loval">
-            62.8</span>
+          <span title="12:44:00 AM (Sunday)" class="loval">
+            62.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:31:08 AM">
-            72</span><br/>
+          <span title="12:43:06 AM">
+            73</span><br/>
           <span title="12:00:04 AM">
             68</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:31:08 AM (Sunday)">
-            72</span><br/>
+          <span title="12:43:06 AM (Sunday)">
+            73</span><br/>
           <span title="12:00:04 AM (Sunday)">
             68</span>
         </td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           5<br/>
-          7
+          4
         </td>
         <td class="data new_row hilo_week">
           5<br/>
-          7
+          4
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          240
+          241
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 9 hours, 52 minutes</td>
+      <td class="data">18 days, 9 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 9 hours, 52 minutes</td>
+      <td class="data">18 days, 9 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
