--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:44:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.5&#176;F</td>
+        <td class="data">62.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.7&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">73%</td>
+        <td class="data">74%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.870 inHg (0.002)</td>
+        <td class="data">29.869 inHg (0.000)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph NNW (338&#176;)</td>
+        <td class="data">5 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.1&#176;F</td>
+        <td class="data">77.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:16 AM">
             64.4</span><br/>
-          <span title="12:44:00 AM">
-            62.5</span>
+          <span title="12:47:04 AM">
+            62.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:16 AM (Sunday)">
             64.4</span><br/>
-          <span title="12:44:00 AM (Sunday)">
-            62.5</span>
+          <span title="12:47:04 AM (Sunday)">
+            62.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:44:00 AM" class="loval">
-            62.5</span>
+          <span title="12:47:04 AM" class="loval">
+            62.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:44:00 AM (Sunday)" class="loval">
-            62.5</span>
+          <span title="12:47:04 AM (Sunday)" class="loval">
+            62.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:43:06 AM">
-            73</span><br/>
+          <span title="12:45:40 AM">
+            74</span><br/>
           <span title="12:00:04 AM">
             68</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:43:06 AM (Sunday)">
-            73</span><br/>
+          <span title="12:45:40 AM (Sunday)">
+            74</span><br/>
           <span title="12:00:04 AM (Sunday)">
             68</span>
         </td>
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="12:04:34 AM">
-            10</span><br/>
-          355
+          <span title="12:44:06 AM">
+            11</span><br/>
+          302
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:04:34 AM (Sunday)">
-            10</span><br/>
-          355
+          <span title="12:44:06 AM (Sunday)">
+            11</span><br/>
+          302
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           5<br/>
-          4
+          0
         </td>
         <td class="data new_row hilo_week">
           5<br/>
-          4
+          0
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:01:00 AM">
             77.4</span><br/>
-          <span title="12:29:00 AM">
-            77.1</span>
+          <span title="12:46:00 AM">
+            77.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:01:00 AM (Sunday)">
             77.4</span><br/>
-          <span title="12:29:00 AM (Sunday)">
-            77.1</span>
+          <span title="12:46:00 AM (Sunday)">
+            77.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:04 AM">
-            43</span><br/>
+          <span title="12:49:00 AM">
+            44</span><br/>
           <span title="12:00:04 AM">
             43</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:00:04 AM (Sunday)">
-            43</span><br/>
+          <span title="12:49:00 AM (Sunday)">
+            44</span><br/>
           <span title="12:00:04 AM (Sunday)">
             43</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 9 hours, 57 minutes</td>
+      <td class="data">18 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 9 hours, 57 minutes</td>
+      <td class="data">18 days, 10 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
