--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:49:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">61.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">61.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">61.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">74%</td>
+        <td class="data">75%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.869 inHg (0.000)</td>
+        <td class="data">29.870 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">5 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:16 AM">
             64.4</span><br/>
-          <span title="12:47:04 AM">
-            62.2</span>
+          <span title="12:52:42 AM">
+            61.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:16 AM (Sunday)">
             64.4</span><br/>
-          <span title="12:47:04 AM (Sunday)">
-            62.2</span>
+          <span title="12:52:42 AM (Sunday)">
+            61.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:47:04 AM" class="loval">
-            62.2</span>
+          <span title="12:52:42 AM" class="loval">
+            61.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:47:04 AM (Sunday)" class="loval">
-            62.2</span>
+          <span title="12:52:42 AM (Sunday)" class="loval">
+            61.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:45:40 AM">
-            74</span><br/>
+          <span title="12:53:22 AM">
+            75</span><br/>
           <span title="12:00:04 AM">
             68</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:45:40 AM (Sunday)">
-            74</span><br/>
+          <span title="12:53:22 AM (Sunday)">
+            75</span><br/>
           <span title="12:00:04 AM (Sunday)">
             68</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           5<br/>
-          0
+          2
         </td>
         <td class="data new_row hilo_week">
           5<br/>
-          0
+          2
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 10 hours, 2 minutes</td>
+      <td class="data">18 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 10 hours, 2 minutes</td>
+      <td class="data">18 days, 10 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
