--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 12:54:00 AM</p>
+    <p class="lastupdate">09/20/2020 12:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">61.9&#176;F</td>
+        <td class="data">61.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">61.9&#176;F</td>
+        <td class="data">61.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">61.9&#176;F</td>
+        <td class="data">61.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.9&#176;F</td>
+        <td class="data">53.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.870 inHg (0.002)</td>
+        <td class="data">29.865 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph NNE (22&#176;)</td>
+        <td class="data">6 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.0&#176;F</td>
+        <td class="data">76.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:16 AM">
             64.4</span><br/>
-          <span title="12:52:42 AM">
-            61.9</span>
+          <span title="12:57:20 AM">
+            61.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:16 AM (Sunday)">
             64.4</span><br/>
-          <span title="12:52:42 AM (Sunday)">
-            61.9</span>
+          <span title="12:57:20 AM (Sunday)">
+            61.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="12:52:42 AM" class="loval">
-            61.9</span>
+          <span title="12:57:20 AM" class="loval">
+            61.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:52:42 AM (Sunday)" class="loval">
-            61.9</span>
+          <span title="12:57:20 AM (Sunday)" class="loval">
+            61.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="12:01:00 AM">
             29.872</span><br/>
-          <span title="12:15:00 AM">
-            29.866</span>
+          <span title="12:58:00 AM">
+            29.865</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:01:00 AM (Sunday)">
             29.872</span><br/>
-          <span title="12:15:00 AM (Sunday)">
-            29.866</span>
+          <span title="12:58:00 AM (Sunday)">
+            29.865</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:01:00 AM">
             77.4</span><br/>
-          <span title="12:46:00 AM">
-            77.0</span>
+          <span title="12:57:00 AM">
+            76.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:01:00 AM (Sunday)">
             77.4</span><br/>
-          <span title="12:46:00 AM (Sunday)">
-            77.0</span>
+          <span title="12:57:00 AM (Sunday)">
+            76.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 10 hours, 7 minutes</td>
+      <td class="data">18 days, 10 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 10 hours, 7 minutes</td>
+      <td class="data">18 days, 10 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
