--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 01:44:00 AM</p>
+    <p class="lastupdate">09/20/2020 01:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.871 inHg (0.000)</td>
+        <td class="data">29.871 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="12:01:00 AM">
-            29.872</span><br/>
+          <span title="01:47:00 AM">
+            29.873</span><br/>
           <span title="01:23:00 AM">
             29.864</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:01:00 AM (Sunday)">
-            29.872</span><br/>
+          <span title="01:47:00 AM (Sunday)">
+            29.873</span><br/>
           <span title="01:23:00 AM (Sunday)">
             29.864</span>
         </td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          243
+          244
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 10 hours, 57 minutes</td>
+      <td class="data">18 days, 11 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 10 hours, 57 minutes</td>
+      <td class="data">18 days, 11 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
